--- a/css/style.css
+++ b/css/style.css
@@ -881,9 +881,9 @@ a:hover{
 .carousel-gallery .owl-nav{
     position: absolute;
     right: -76%;
-    bottom: 100%;
+    bottom: 0;
     margin-right: 0;
-    transform: translateX(-50%);
+    transform: translate(-50%, -50%);
 }
 .modal-gallery .content-wrapper{
     margin-top: 1rem;
