--- a/css/style.css
+++ b/css/style.css
@@ -1235,6 +1235,9 @@ a:hover{
     z-index: 4;
     position: relative;
 }
+.footer-details p.alamat{
+    width: 80%;
+}
 @media screen and (max-width: 414px) {
     p {
         font-size: 0.9rem;
@@ -1361,15 +1364,18 @@ a:hover{
     .footer-details .fax-column .fax-details{
         text-align: left;
     }
+    .footer-details p.alamat{
+        width: 67%;
+    }
     .bottom-content .ornament-blue {
         width: 18.9vw;
         top: 0%;
         transform: translateY(-50%);
     }
     .about-top{
-        background-image: url(../images/about-top-header-mobile-04.jpg);
-        padding-top: 29.9rem;
-        padding-bottom: 3.9rem;
+        background-color: #fff;
+        padding-top: 8rem;
+        padding-bottom: 1.9rem;
     }
     .about-top .elements {
         top: 247px;
@@ -1905,5 +1911,8 @@ a:hover{
     .link-orange-border::after, .link-gray-border::after{
         margin-bottom: -17px;
         padding-bottom: 12px;
+    }
+    .nav-about-content{
+        display: none;
     }
 }
