--- a/css/style.css
+++ b/css/style.css
@@ -1786,8 +1786,8 @@ a:hover{
         z-index: 2;
     }
     .contact-top {
-        background-image: url(../images/contact-header-top-bg-mobile-02.jpg);
-        padding-top: 32.6rem;
+        background-color: #fff;
+        padding-top: 10.6rem;
     }
     .contact-top .elements{
         width: 20vw;
