--- a/css/style.css
+++ b/css/style.css
@@ -2024,4 +2024,8 @@ a:hover{
         right: 0;
         bottom: 0;
     }
+    .section-forms-ansaf .button-form::after{
+        margin-bottom: -16px;
+        padding-bottom: 14px;
+    }
 }
