--- a/css/style.css
+++ b/css/style.css
@@ -1969,7 +1969,7 @@ a:hover{
     }
     .carousel-mobile-visi .owl-nav .owl-next{
         position: absolute;
-        right: 7%;
+        right: 0;
         top: 15%;
     }
     .about-visi-content{
