--- a/css/style.css
+++ b/css/style.css
@@ -2069,4 +2069,7 @@ a:hover{
     .modal-gallery .logo-pt{
         width: 130px;
     }
+    #dewan_mobile{
+		position: absolute;top: 10px;left: 0;width: 50px;height: 50px;
+    }
 }
