--- a/css/style.css
+++ b/css/style.css
@@ -1209,6 +1209,29 @@ a:hover{
     margin-right: -2px;
     padding-bottom: 6px;
 }
+.thumbnail-gallery a{
+    display:inline-block;
+    margin:0;
+}
+.thumbnail-gallery a::after{
+    display: block;
+    content: '';
+    border-bottom: solid 4px #ed6f30;
+    transform: scaleX(0);
+    transition: transform 250ms ease-in-out;
+    margin-bottom: -7px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-bottom: 0;
+    width: 100%;
+}
+.thumbnail-gallery a::after{
+    transform-origin: 100% 50%;
+}
+.thumbnail-gallery a:hover::after{
+    transform: scaleX(1);
+    transform-origin: 0% 50%;
+}
 .section-forms-ansaf .button-form::after{
     transform-origin: 100% 50%;
 }
