--- a/css/style.css
+++ b/css/style.css
@@ -2098,4 +2098,7 @@ a:hover{
     #dewan_mobile{
 		position: absolute;top: 10px;left: 0;width: 50px;height: 50px;
     }
+    .carousel-mobile-stagepadding img{
+        width: 90% !important;
+    }
 }
