--- a/css/map.css
+++ b/css/map.css
@@ -1,6 +1,6 @@
 /* equipment image markers */
 .map-wrap{
-  height: 100vh;
+  height: 400px;
   width: 90%;
   position: relative;
   margin: auto;
