--- a/css/map.css
+++ b/css/map.css
@@ -20,8 +20,8 @@ position: absolute;
 display:inline-block;
 border-radius: 50%;
 background: rgba(255, 165, 0, 0);
-width: 22px;
-height: 22px;
+width: 13px;
+height: 13px;
 cursor: pointer;
 box-shadow: 0 0 0 rgba(255, 165, 0, 0.5);
 animation: pulse 2s infinite;
@@ -37,8 +37,8 @@ transition: all 1s ease-in-out;
   border: solid 2px rgba(255, 165, 0, .9);
   content: "";
   border-radius: 50%;
-  width: 18px;
-  height: 18px;
+  width: 15px;
+  height: 15px;
   opacity:0;
   display:block;
   position:absolute;
@@ -51,12 +51,12 @@ transition: all 1s ease-in-out;
   border: solid 2px rgba(255, 165, 0, .9);
   content: "";
   border-radius: 50%;
-  width: 28px;
-  height: 28px;
+  width: 15px;
+  height: 15px;
   display:block;
   position:absolute;
-  top: -5px;
-  right: -5px;
+  top: 0;
+  right: 0;
   opacity:1;
   transition: all .5s ease-in-out;
 }
@@ -126,8 +126,8 @@ transition: all 1s ease-in-out;
 }
 .map .close{
 border-radius: 50%;
-width: 22px;
-height: 22px;
+width: 15px;
+height: 15px;
 position: relative;
 z-index: 9;
 }
@@ -137,8 +137,8 @@ position: absolute;
 display:inline-block;
 border-radius: 50%;
 z-index: 999;
-width: 22px;
-height: 22px;
+width: 15px;
+height: 15px;
 cursor: pointer;
 }
 .close{
