--- a/css/style.css
+++ b/css/style.css
@@ -1287,7 +1287,7 @@ a:hover{
     position: relative;
 }
 .footer-details p.alamat{
-    width: 80%;
+    width: 84%;
 }
 .about-mid p.visi-misi{
     width: 85%;
@@ -2099,6 +2099,6 @@ a:hover{
 		position: absolute;top: 10px;left: 0;width: 50px;height: 50px;
     }
     .carousel-mobile-stagepadding img{
-        width: 90% !important;
+        width: 90.footer-details p.alamat% !important;
     }
 }
