--- a/css/style.css
+++ b/css/style.css
@@ -2099,6 +2099,6 @@ a:hover{
 		position: absolute;top: 10px;left: 0;width: 50px;height: 50px;
     }
     .carousel-mobile-stagepadding img{
-        width: 90.footer-details p.alamat% !important;
+        width: 90% !important;
     }
 }
