--- a/css/style.css
+++ b/css/style.css
@@ -1422,7 +1422,7 @@ a:hover{
         text-align: left;
     }
     .footer-details p.alamat{
-        width: 67%;
+        width: 13.1rem;
     }
     .bottom-content .ornament-blue {
         width: 18.9vw;
