--- a/css/map.css
+++ b/css/map.css
@@ -1,13 +1,15 @@
 /* equipment image markers */
 .map-wrap{
+  max-width: 1200px;
+  max-height: 800px;
   height: 400px;
-  width: 90%;
   position: relative;
   margin: auto;
 }
 .map{
-  width: 100%;
-  height: 100vh;
+  max-width: 1200px;
+  max-height: 800px;
+  height: 400px;
   display: block;
   position: absolute;
 }
